[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "transportations-validator"
version = "0.2.0"
description = "Lightweight validator for transportation engineering inputs against HCM/AASHTO standards"
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = "Apache-2.0"
authors = [
    { name = "CrossTraffic Team" }
]
keywords = [
    "transportation",
    "validation",
    "hcm",
    "highway-capacity-manual",
    "aashto",
    "traffic-engineering",
    "two-lane-highway",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Typing :: Typed",
]

# Core dependencies - minimal for lightweight usage
dependencies = []

[project.optional-dependencies]
# Full API server with database support
api = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "asyncpg>=0.28.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "alembic>=1.11.0",
    "neo4j>=5.0.0",
    "httpx>=0.24.0",
    "python-multipart>=0.0.6",
    "simpleeval>=1.0.0",
    "pyvis>=0.3.2",
    "matplotlib>=3.10.0",
    "scipy>=1.14.0",
]

dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.24.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "pre-commit>=3.6.0",
]

# Executable-repair / Chapter 12 integration tests re-execute through the Rust
# HCM library. It is optional: the validator runs fully without it and those
# tests skip (see the pytest.importorskip in tests/unit/test_repair.py). Install
# this extra to exercise them. At dev time the library is built from the sibling
# checkout (see [tool.uv.sources]) so it always tracks the current library
# source rather than a published wheel — this is what keeps a downstream venv
# from silently holding a stale build.
rust = [
    "transportations-library>=0.2.0",
]

# All optional dependencies
all = [
    "transportations-validator[api,dev]",
]

[tool.uv.sources]
# Local dev only: build transportations-library from the sibling checkout at
# ../transportations-library. Applies solely when the `rust` extra is synced.
# CI installs only ".[dev]" (no library, tests skip), so it never needs this;
# any workflow that does want the library from the index should pass
# `--no-sources` and rely on a published wheel.
transportations-library = { path = "../transportations-library", editable = true }

[project.urls]
Homepage = "https://github.com/crosstraffic/transportations-validator"
Documentation = "https://github.com/crosstraffic/transportations-validator#readme"
Repository = "https://github.com/crosstraffic/transportations-validator"
"Bug Tracker" = "https://github.com/crosstraffic/transportations-validator/issues"

[project.scripts]
transportations-validator = "transportations_validator.main:run"

# KG-AUTO experiment artifacts live under seed_data/relationships/ for the dev scripts/tests, but are not runtime corpus — keep them out of the distributed package.
[tool.hatch.build.targets.wheel]
packages = ["src/transportations_validator"]
exclude = [
    "seed_data/relationships/llm_extracted_edges*.json",
    "seed_data/relationships/code_derived_edges.json",
    "seed_data/relationships/edge_tiers.json",
]

# Ship the seed corpus inside the installed package so the reasoning loaders
# (relationships, parameter bounds, conflict scenarios) resolve when pip-installed,
# not only from an editable source tree. Lands at
# site-packages/transportations_validator/seed_data/.
[tool.hatch.build.targets.wheel.force-include]
"seed_data" = "transportations_validator/seed_data"

[tool.hatch.build.targets.sdist]
exclude = [
    "seed_data/relationships/llm_extracted_edges*.json",
    "seed_data/relationships/code_derived_edges.json",
    "seed_data/relationships/edge_tiers.json",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
# Single event loop for the whole run: the app's asyncpg pool (db/postgres/
# connection.py) is module-global, so per-test loops poison its connections.
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[dependency-groups]
dev = [
    "aiosqlite>=0.22.1",
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.14",
]
